CSS/awards.css
body {
    background-color: darkolivegreen;
    margin: 0;
    overflow: hidden;
}

.left {
/*    overflow-y: scroll;*/
    color: white;
    background-color: black;
    width: 25%;
    height: 100%;
    position: fixed;
    left: 0;
    top: 0;
    text-align: center;
}

.right {
/*    overflow-y: scroll;  */
    color: white;
    background-color: black;
    width: 25%;
    height: 100%;
    position: fixed;
    right: 0;
    top: 0;
    text-align: center;
}

#titles {
    text-align: center;
    padding: 2%;
    font-family: 'Fredoka One', cursive;
}

.awardImg {
    width: 100px;
}


#prtitle {
    text-align: center;
    margin: 0;
    margin-top: 1%;
    font-size: 200%;
    font-family: 'East Sea Dokdo', cursive;

}

.prcr {
    text-align: center;
    width: 35%;
    margin: auto;
    display: flex;
    justify-content: center;
    filter: hue-rotate(160deg);
}

div.prcr {
   margin-top: 50px;    
}

#prcrImg {
    max-width: 35%;
    min-width: 20%;
}

/* HOME BUTTON START*/
button {
    display: block;
    margin: auto;
    margin-bottom: 2%;
}

button:hover {
    background-color: darkgray;
}
/* HOME BUTTON END*/

#bjanka, #seraphina {
    align-self: center;
    width: 23%;
    margin: 1%;
}
.prp {
    display: block;
    margin: auto;
    width: 100%;
    height: 50%;
    display: flex;
    justify-content: center;
}

@media screen and (max-width: 540px){
    body{
        overflow: scroll;
    }
    .left {
        position: static;
        width: auto;
        height: auto;
        background-color: transparent;
    }
    .right {
        position: static;
        width: auto;
        height: auto;
        background-color: transparent;
    }
    
    .prcr {
        text-align: center;
        width: 45%;
        margin: auto;
        display: flex;
        justify-content: center;
    }
    #prcrImg {
        max-width: 100%;
        min-width: 80%;
    }
        .prp {
    margin: auto;
    width: 100%;
    display: flex;
    justify-content: center;
}
    #bjanka, #seraphina {
    align-self: center;
    width: 50%;
    margin: 1%;
    margin-top: 5%;
}
    }

@media screen and (min-height: 700px){
    body{
        overflow: scroll;
    }
    .left {
        position: static;
        width: auto;
        height: auto;
        background-color: transparent;
    }
    .right {
        position: static;
        width: auto;
        height: auto;
        background-color: transparent;
    }
    
    .prcr {
        text-align: center;
        width: 45%;
        margin: auto;
        display: flex;
        justify-content: center;
    }
    #prcrImg {
        max-width: 35%;
        min-width: 20%;
    }  
    .prp {
    margin: auto;
    width: 100%;
    display: flex;
    justify-content: center;
}
    #bjanka, #seraphina {
    align-self: center;
    width: 50%;
    margin: 1%;
    margin-top: 5%;
}
}

